# genai-quality-eval

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: design-decisions.md
evaluators/: llm_evaluator.py
examples/: quick_start.py
hallucination/: risk_detector.py
metrics/latency/: latency_tracker.py
rag/: retrieval_validator.py
src/genai_quality_eval/: __init__.py
src/genai_quality_eval/evaluators/: llm_evaluator.py
src/genai_quality_eval/hallucination/: risk_detector.py
src/genai_quality_eval/metrics/latency/: latency_tracker.py
src/genai_quality_eval/rag/: retrieval_validator.py
tests/regression/: test_prompt_regression.py
tests/unit/: test_hallucination_detector.py  test_latency_tracker.py  test_llm_evaluator.py  test_retrieval_validator.py
