[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-quality-eval"
version = "0.1.0"
description = "CI-ready quality gates for LLM, RAG, hallucination, latency, and prompt regression testing."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
