[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-quality-eval"
version = "0.1.0"
description = "CI-ready quality gates for LLM, RAG, hallucination, latency, and prompt regression testing."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.30.0",
    "anthropic>=0.25.0",
]
rag = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "sentence-transformers>=3.0.0",
    "evaluate>=0.4.0",
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "openai>=1.30.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
